<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="person_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="email_subject">Just Java order for <xliff:g id="name" example="Victor">%s</xliff:g></string>
    <string name="email_content">Hello, <xliff:g id="name" example="Victor">%s</xliff:g>!\nTotal: $<xliff:g id="total_price" example="1">%d</xliff:g>
Thank you!!</string>
</resources>
